# primacore

./: .buildinfo  .gitignore  CHANGELOG.md  CONTRIBUTING.html  CONTRIBUTING.md  README.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: CONTRIBUTING.doctree  README.doctree  index.doctree
.doctrees/api/: index.doctree
.github/workflows/: autogenerated-docs.yml  pull_request.yml
_sources/: README.md.txt  index.rst.txt
api/: index.html
docs/: conf.py
docs/api/: index.rst
primacore/: dataloader.py  plots.py  run_model.py  validation.py
primacore/data/ground_truth/: AMPD_po.csv
primacore/models/: brt.py  mat.py  rf.py
primapy/data/: synthetic_climate_data.csv  synthetic_coords_data.csv  synthetic_modern_data.csv  synthetic_test_data.csv
primapy/data/ground_truth/: AMPD_cl_worldclim2.csv  AMPD_co.csv  scrubbed_SAR.csv
primapy/models/: brt.py  mat.py  rf.py  wa_pls.py
primapy/old/: main.py
primapy/old/tabs/: data_exploration.py  predictions.py  validation.py
primapy/old/utils/: colors.py  csv_loader.py  dataloader.py  defaults.py  file_manager.py  generator.py  mask_generator.py  page_loader.py  state_manager.py  synthesizer.py
primapy/old/validation/: cross_validate.py
primapy/old/visuals/: climate_scatter.py  distribution_per_target.py  location_map.py  plot.py  single_variable.py
scripts/: lint.sh  test.sh
src/prima_online/models/: brt.py
tests/: test_dataloader.py  test_validation.py
tests/models/: test_brt.py  test_mat.py  test_rf.py
