[project]
name = "primacore"
version = "0.1.4"
authors = [{ name = "Jordi Sassoon", email = "jordisassoon@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "uvicorn",
  "scikit-learn",
  "tqdm",
  "lightgbm",
  "black",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-timeout>=2.4.0",
    "pytest-vcr>=1.0.2",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.3",
    "shellcheck-py>=0.11.0.1",
    "ty>=0.0.14",
    "types-requests>=2.32.4.20260107",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["primacore"]

[tool.uv]
package = true